# myOpenGL

./: CMakeLists.txt
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Rendered.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
